# faucetli

./: .gitignore  Cargo.toml  README.md  fleet.toml  package.json  tsconfig.json
.cargo/: config.toml
.circleci/: config.yml
docs/: ratelimit.md
src/: main.rs
src/cli/: app.rs
src/commands/: funding.ts  networks.ts  request.ts  solana.ts
src/core/: config.rs  constants.rs  mod.rs
src/core/commands/: funding.rs  mod.rs  networks.rs  request.rs
src/data/: constants.ts  networks.ts  questions.ts  solQuestions.ts
src/lib/: sendTokens.ts
src/utils/: createConfigFile.ts  createOrUpdateConfigFile.ts  getAddressFromConfigFile.ts  ratelimit.ts
