[package]
name = "faucetli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = "3.1.18"
colored = "2.0.0"
dirs = "4.0.0"
inquire = "0.2.1"
strum = "0.24.1"
strum_macros = "0.24.1"
